--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -27,8 +27,9 @@
     outline: none;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;;
     background-image: url("../../assets/icons/cancel-svgrepo-com.svg");
+    transform-origin: center;
     transition: transform 0.3s linear;
   }
 
